# ma

./: .gitignore  Dockerfile
bg/: .gitignore  CMakeLists.txt  bg.h  main.cpp  operations.cpp
test/: CMakeLists.txt  main.c
